--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -376,14 +376,14 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   }
 
   protected Rollup__mdt addOrderBys(Rollup__mdt localMeta, List<RollupOrderBy__mdt> orderBys, Schema.SObjectField calcItemRollupField) {
-    if (localMeta.RollupFieldOnCalcItem__c == calcItemRollupField.getDescribe().getName()) {
+    if (localMeta.RollupFieldOnCalcItem__c == calcItemRollupField.toString()) {
       localMeta = appendOrderByMetadata(localMeta, orderBys);
     }
     return localMeta;
   }
 
   protected void addLimitToMetadata(Rollup__mdt localMeta, Integer limitAmount, Schema.SObjectField calcItemRollupField) {
-    if (localMeta.RollupFieldOnCalcItem__c == calcItemRollupField.getDescribe().getName()) {
+    if (localMeta.RollupFieldOnCalcItem__c == calcItemRollupField.toString()) {
       localMeta.LimitAmount__c = limitAmount;
       localMeta.IsFullRecordSet__c = true;
     }
@@ -482,9 +482,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   public class NamespaceInfo {
     @AuraEnabled
-    public final String safeObjectName = Rollup__mdt.SObjectType.getDescribe(SObjectDescribeOptions.DEFERRED).getName();
+    public final String safeObjectName = Rollup__mdt.SObjectType.toString();
     @AuraEnabled
-    public final String safeRollupOperationField = this.safeObjectName + '.' + Rollup__mdt.RollupOperation__c.getDescribe().getName();
+    public final String safeRollupOperationField = this.safeObjectName + '.' + Rollup__mdt.RollupOperation__c.toString();
     @AuraEnabled
     public final String namespace = Rollup.class.getName() == 'Rollup' ? '' : Rollup.class.getName().substringBefore('.Rollup') + '__';
   }
@@ -1973,12 +1973,12 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     List<SObject> triggerRecords = getTriggerRecords();
     Rollup__mdt meta = appendOrderByMetadata(
       new Rollup__mdt(
-        CalcItem__c = triggerRecords.getSObjectType()?.getDescribe().getName(),
-        LookupFieldOnCalcItem__c = lookupFieldOnCalcItem.getDescribe().getName(),
-        LookupFieldOnLookupObject__c = lookupFieldOnOperationObject.getDescribe().getName(),
-        LookupObject__c = lookupSObjectType.getDescribe().getName(),
-        RollupFieldOnCalcItem__c = operationFieldOnCalcItem.getDescribe().getName(),
-        RollupFieldOnLookupObject__c = operationFieldOnOperationObject.getDescribe().getName(),
+        CalcItem__c = triggerRecords.getSObjectType()?.toString(),
+        LookupFieldOnCalcItem__c = lookupFieldOnCalcItem.toString(),
+        LookupFieldOnLookupObject__c = lookupFieldOnOperationObject.toString(),
+        LookupObject__c = lookupSObjectType.toString(),
+        RollupFieldOnCalcItem__c = operationFieldOnCalcItem.toString(),
+        RollupFieldOnLookupObject__c = operationFieldOnOperationObject.toString(),
         RollupOperation__c = rollupOperation.name()
       ),
       orderByMetas
@@ -2451,10 +2451,10 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     String relationshipName = fieldToken.getDescribe().getRelationshipName();
     Integer relationshipIndex = meta.GrandparentRelationshipFieldPath__c.indexOf(relationshipName) + relationshipName.length();
     String priorFieldPath = meta.GrandparentRelationshipFieldPath__c.substring(0, relationshipIndex) + '.Id';
-    if (meta.OneToManyGrandparentFields__c != null && meta.OneToManyGrandparentFields__c.contains(fieldToken.getDescribe().getName())) {
+    if (meta.OneToManyGrandparentFields__c != null && meta.OneToManyGrandparentFields__c.contains(fieldToken.toString())) {
       List<String> fieldPathTuples = meta.OneToManyGrandparentFields__c.split(',');
       for (String fieldPathTuple : fieldPathTuples) {
-        if (fieldToken.getDescribe().getName().equalsIgnoreCase(fieldPathTuple.substringAfter('.'))) {
+        if (fieldToken.toString().equalsIgnoreCase(fieldPathTuple.substringAfter('.'))) {
           priorFieldPath = 'Id';
           break;
         }
@@ -2706,11 +2706,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
     for (Rollup__mdt rollupMetadata : rollupOperations) {
       Op rollupOp = OP_NAME_TO_OP.get(rollupMetadata.RollupOperation__c.toUpperCase());
-      if (
-        rollupMetadata.RollupGrouping__r.Id != null &&
-        rollupMetadata.CalcItem__c != null &&
-        rollupMetadata.CalcItem__c != sObjectType.getDescribe(SObjectDescribeOptions.DEFERRED).getName()
-      ) {
+      if (rollupMetadata.RollupGrouping__r.Id != null && rollupMetadata.CalcItem__c != null && rollupMetadata.CalcItem__c != SObjectType.toString()) {
         Schema.DescribeSObjectResult childDescribe = init.getDescribeFromName(rollupMetadata.CalcItem__c);
         sObjectType = childDescribe.getSObjectType();
         calcItemFields = childDescribe.fields.getMap();
