Fixes #638 by addressing a classic DST issue in RollupDateLiteral. Slight cleanup of RollupFinalizer and RollupParentResetProcessor

--- a/extra-tests/classes/RollupFinalizerTests.cls
+++ b/extra-tests/classes/RollupFinalizerTests.cls
@@ -1,19 +1,31 @@
 @IsTest
 private class RollupFinalizerTests {
-  @TestSetup
-  static void setup() {
-    upsert new RollupSettings__c(IsEnabled__c = true);
-    insert new Account(Name = RollupFinalizerTests.class.getName());
+  public class ExampleFinalizerContext implements System.FinalizerContext {
+    public Id getAsyncApexJobId() {
+      return RollupTestUtils.createId(AsyncApexJob.SObjectType);
+    }
+
+    public String getRequestId() {
+      return System.Request.getCurrent().getRequestId();
+    }
+
+    public ParentJobResult getResult() {
+      return ParentJobResult.UNHANDLED_EXCEPTION;
+    }
+
+    public Exception getException() {
+      return new DmlException();
+    }
   }
 
   @IsTest
   static void shouldGracefullyLogUnhandledException() {
-    RollupFinalizer.testResult = ParentJobResult.UNHANDLED_EXCEPTION;
+    System.FinalizerContext fc = new ExampleFinalizerContext();
 
     Test.startTest();
-    new RollupFinalizer().execute(null);
+    new RollupFinalizer().execute(fc);
     Test.stopTest();
 
-    System.assertEquals(true, RollupFinalizer.wasCalled);
+    System.assertEquals(true, RollupFinalizer.wasExceptionLogged);
   }
 }
